--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-###  title: "All Punk (Pixel Art) News, All The Time! - Fuck Yeah, It's Punk Week! - Punk Is Dead, Long Live Punk"
+title: "All Punk (Pixel Art) News, All The Time! - Fuck Yeah, It's Punk Week! - Punk Is Dead, Long Live Punk"
+
 
 
 exclude:
