--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: "All Punk (Pixel Art) News, All The Time! - Fuck Yeah, It's Punk Week! - Punk Is Dead, Long Live Punk"
 
+excerpt_separator: "<!-- more -->"
 
 
 exclude:
